2003-12-22  James Henstridge  <james@daa.com.au>

	* setup.py: distutils fixes from Alif Wahid
	<awah005@users.sourceforge.net> (bug #123014).

	* gtk/gdk.override (ignore-win32): ignore gdk_font_get_display.

	* gtk/gtk.override (ignore): ignore plug construct functions.
	(ignore-win32): ignore gtk_plug_new_for_display.

	* gtk/gdk.defs (pixmap_foreign_new_for_display): caller owns return.
	(pixmap_foreign_new): same here (bug #129754).
	(window_foreign_new): same here.
	(window_foreign_new_for_display): same here.

2003-12-20  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* codegen/codegen.py (Wrapper.get_initial_constructor_substdict):
	now receives the constructor FunctionDef as argument.
	(Wrapper.write_constructor): Pass the constructor
	get_initial_constructor_substdict.
	(GObjectWrapper.get_initial_constructor_substdict): Receive/pass
	constructor argument. If constructor's caller_owns_return flag is
	set to #f, add an extra g_object_ref(self->obj).
	(GBoxedWrapper.get_initial_constructor_sub): Receive/pass extra
	constructor argument.
	(GPointerWrapper.get_initial_constructor_substdict): idem.

2003-12-17  James Henstridge  <james@daa.com.au>

	* gtk/gtk-types.defs (TextSearchFlags): GtkTextSearchFlags is a
	flags value, rather than an enum.

2003-12-16  James Henstridge  <james@daa.com.au>

	* configure.in (CFLAGS): add -fno-strict-aliasing to CFLAGS if the
	compiler supports it.  The Python API breaks some of the strict
	aliasing rules.

	* acinclude.m4 (JH_ADD_CFLAG): new macro to check whether the
	compiler supports a particular cflag.

	* codegen/codegen.py
	(GInterface.get_initial_class_substdict): GInterface wrappers
	should be sizeof(PyObject), since they are mixins.

2003-12-19  Johan Dahlin  <johan@gnome.org>

	* gtk/gdk.defs (fill): Change to guint32. Patch by
	hyriand@thegraveyard.org. Fixes 121611.

	* gtk/pygtkcellrenderer.c
	(pygtk_generic_cell_renderer_start_editing): Allow return values