@@ -1,3 +1,10 @@
+2003-12-23  James Henstridge  <james@daa.com.au>
+
+	* pygobject.c (pygobject_get_property): explicitly check if the
+	property is readable first, and raise an exception otherwise
+	(pygobject_set_property): check if property is readable (fixes bug
+	#121544).
+
 2003-12-22  James Henstridge  <james@daa.com.au>
 
 	* setup.py: distutils fixes from Alif Wahid
